# mududb

./: .gitignore  Cargo.toml  readme.cn.md  readme.md
example/vote/: Cargo.toml  makefile.toml  vote.requirement.spec.md
example/vote/build-cfg/: mpk-arguments.toml  transpiler-cfg.toml
example/vote/er/: vote.plantuml
example/vote/package/: package.cfg.toml  package.desc.json  type.desc.json
example/vote/sql/: type.sql
example/vote/src/: lib.rs
example/vote/toml/: app.cfg.toml  procedure.desc.toml
example/wallet/: Cargo.toml  docker-compose.yml  makefile.toml  readme.md
example/wallet/docker/: setup.sh
example/wallet/er/: wallet_er.plantuml
example/wallet/package/: package.desc.json  package.desc.toml  type.desc.json
example/wallet/src/: lib.rs
example/wallet/toml/: procedure.desc.toml
example/wallet/wasm/: example.wasm
mudu/: Cargo.toml
mudu/src/: lib.rs
mudu/src/common/: _arb_de_en.rs  bc_dec.rs  bc_enc.rs  cmp_equal.rs  cmp_order.rs  crc.rs  default_value.rs  endian.rs  into_result.rs  limitation.rs  mod.rs  package_cfg.rs  result.rs  result_from.rs  serde_utils.rs  slice.rs  this_file.rs  update_delta.rs  xid.rs
mudu/src/data_type/: dat_binary.rs  dat_json.rs  dat_prim.rs  dat_textual.rs  dat_type.rs  dat_type_id.rs  dat_typed.rs  dat_value.rs  dat_value_inner.rs  datum.rs  dt_fn_arbitrary.rs  dt_fn_compare.rs  dt_fn_convert.rs  dt_fn_param.rs  dt_info.rs  dt_kind.rs  dt_of_datum.rs  dt_param.rs  dtp_array.rs  dtp_kind.rs  dtp_object.rs  dtp_string.rs  dvi_array.rs  dvi_object.rs  mod.rs  param.rs
mudu/src/database/: attr_binary.rs  attr_field_access.rs  attr_value.rs  context.rs  db_conn.rs  entity.rs  entity_set.rs  entity_utils.rs  filter.rs  mod.rs  sql.rs  sql_params.rs  table.rs  test_entity.rs  test_object.rs  tx.rs
mudu/src/error/: ec.rs  err.rs  err_struct.rs  mod.rs
mudu/src/procedure/: proc.rs  proc_desc.rs  proc_param.rs  proc_result.rs
mudu/src/tuple/: comparator.rs  datum.rs  datum_convert.rs  datum_desc.rs  datum_vec.rs  enumerable_datum.rs  field_desc.rs  mod.rs  rs_tuple_datum.rs  tuple_binary_desc.rs  tuple_field.rs  tuple_field_desc.rs  tuple_ref.rs  typed_bin.rs  vec_dyn_datum.rs
mudu/src/utils/: app_proc_desc.rs  bin_size.rs  bin_slot.rs  buf.rs  case_convert.rs  json.rs  mod.rs  msg_pack.rs  toml.rs
mudu_contract/: Cargo.toml
mudu_contract/src/: lib.rs  protocol.rs
mudu_contract/src/database/: attr_binary.rs  attr_field_access.rs  attr_value.rs  context.rs  db_conn.rs  entity.rs  entity_set.rs  entity_utils.rs  err_no.rs  filter.rs  mod.rs  predicate.rs  prepared_stmt.rs  project.rs  result_batch.rs  result_set.rs  sql.rs  sql_param_value.rs  sql_params.rs  sql_stmt.rs  sql_stmt_text.rs  table.rs  test_command_in.rs  test_entity.rs  test_object.rs  tx.rs  v2h_param.rs
mudu_contract/src/procedure/: mod.rs  package_desc.rs  proc.rs  proc_desc.rs  procedure_param.rs  procedure_result.rs
mudu_contract/src/tuple/: binary_to_json.rs  build_tuple.rs  comparator.rs  datum_convert.rs  datum_desc.rs  datum_vec.rs  enumerable_datum.rs  field_desc.rs  mod.rs  read_datum.rs  slot.rs  tuple_binary.rs  tuple_binary_desc.rs  tuple_datum.rs  tuple_field.rs  tuple_field_desc.rs  tuple_key.rs  tuple_ref.rs  tuple_value.rs  typed_bin.rs  update_tuple.rs  vec_dyn_datum.rs  write_value.rs
mudu_gen/: Cargo.toml  build.rs
mudu_gen/src/: lib.rs
mudu_gen/src/entity/: entity_info.rs  field_info.rs  mod.rs
mudu_gen/src/lang_impl/: mod.rs
mudu_gen/src/src_gen/: code_gen.rs  codegen_cfg.rs  column_def.rs  contract.wit  create_render.rs  gen_entity.rs  gen_message.rs  mod.rs  rust_builder.rs  src_builder.rs  table_def.rs  test_mudul_parse.rs  test_mudul_src_gen.rs  wit_def.rs  wit_parser.rs
mudu_gen/src/ts_const/: mod.rs  ts_field_id.rs  ts_field_name.rs  ts_kind_id.rs  ts_kind_name.rs  ts_seq_index.rs
mudu_gen/templates/csharp/: enum.cs.jinja  file.cs.jinja  record.cs.jinja  variant.cs.jinja
mudu_gen/templates/rust/: entity.rs.jinja  enum.rs.jinja  record.rs.jinja  variant.rs.jinja
mudu_gen/tests/: test_mgen.rs
mudu_gen/tool/: main.rs  test_tool.rs
mudu_gen/tool/test_data/: types.desc.json
mudu_gen/ts_const_gen/: comments.txt  from_gram.rs  grammar.md5.txt  mod.rs
mudu_kernel/: Cargo.toml
mudu_kernel/src/: lib.rs
mudu_kernel/src/collection/: hash_map.rs  tree_map.rs
mudu_kernel/src/command/: create_table.rs  insert_key_value.rs  load_from_file.rs  save_to_file.rs
mudu_kernel/src/contract/: field_info.rs  mem_store.rs  meta_mgr.rs  mod.rs  query_exec.rs  schema_column.rs  table_desc.rs  (+5 more)
mudu_macro/: Cargo.toml  expand.md
mudu_macro/src/: lib.rs
mudu_macro/wit/: procedure.wit
mudu_package/: Cargo.toml
mudu_package/src/: main.rs  merge_desc.rs
mudu_runtime/: Cargo.toml  build.rs
mudu_runtime/src/: db_connector.rs  lib.rs
mudu_runtime/wit/: async-api.wit
mudu_type/: Cargo.toml
mudu_type/src/: dat_binary.rs  dat_json.rs  dat_msg_pack.rs  dat_prim.rs  dat_textual.rs  dat_type.rs  dat_type_id.rs  dat_typed.rs  dat_value.rs  dat_value_inner.rs  datum.rs  db_type.rs  dt_fn_arbitrary.rs  dt_fn_compare.rs  dt_fn_convert.rs  dt_fn_param.rs  dt_function.rs  dt_info.rs  dt_kind.rs  dt_of_datum.rs  dt_param.rs  dtp_array.rs  dtp_kind.rs  dtp_object.rs  dtp_string.rs  len_kind.rs  lib.rs  param.rs  type_error.rs
mudu_utils/: Cargo.toml
mudu_utils/src/: debug.rs  init_log.rs  lib.rs  notifier.rs  task.rs  test_debug_server.rs  ts_gram.rs
mudu_wasm/: Cargo.toml  makefile.toml
mudu_wasm/build-cfg/: mpk-arguments.toml  transpiler-cfg.toml
mudu_wasm/package/: package.cfg.toml  package.desc.json
mudu_wasm/src/: lib.rs
mudu_wasm/toml/: app.cfg.toml  procedure.desc.toml
mudu_wasm/wasm_module/: app1.mpk  package1  proc.toml  testdb.ddl.sql
sql_parser/: Cargo.toml
sql_parser/src/: lib.rs
tree-sitter-sql/: Cargo.toml
tree-sitter-sql/src/: node-types.json  parser.c
tree-sitter-wit/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  grammar.js  justfile  package.json  pyproject.toml  readme.md  setup.py  tree-sitter.json
tree-sitter-wit/src/: grammar.json  node-types.json  parser.c
(+440 files in other folders)
