[workspace]
resolver = "1"

members = [
    "mudu",
    "mudu_type",
    "mudu_contract",
    "mudu_binding",
    "example/wallet",
    "example/vote",
    "mudu_runtime",
    "mudu_gen",
    "sql_parser",
    "tree-sitter-sql",
    "tree-sitter-wit",
    "mudu_macro",
    "mudu_macro_test",
    "mudu_wasm",
    "mudu_utils",
    "sys_interface",
    "mudu_kernel",
    "test_utils",
    "mudud",
    "mudu_package",
    "mudu_transpiler"
]

[workspace.dependencies]
arbitrary = { version = "1.4.2", features = ["derive", "derive_arbitrary"] }
test_utils = { path = "test_utils" }
sys_interface = { path = "sys_interface" }
mudu = { path = "mudu" }
mudu_binding = { path = "mudu_binding" }
md-5 = { version = "0.11.0-rc.0" }
sql_parser = { path = "sql_parser" }
mudu_gen = { path = "mudu_gen" }
tree_sitter_sql = { path = "tree-sitter-sql" }
tree-sitter-wit = { path = "tree-sitter-wit" }
tree-sitter = { version = "0.26.2" }
tree-sitter-language = { version = "0.1.6" }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
project-root = { version = "0.2.2" }
mudu_runtime = { path = "mudu_runtime" }
mudu_macro = { path = "mudu_macro" }
mudu_utils = { path = "mudu_utils" }
mudu_type = { path = "mudu_type" }
mudu_contract = { path = "mudu_contract" }
serde = { version = "1.0.228", features = ["default", "derive", "serde_derive"] }
serde_repr = {version = "0.1.20"}
tracing-subscriber = "0.3.20"
console-subscriber = { version = "0.5.0" }
tokio = { version = "1.40.0", features = ["full"] }
rmp-serde = { version = "1.3.0" }
rmpv = { version = "1.3.0" }
rusqlite = { version = "0.38.0", features = ["bundled"] }
scc = { version = "3.3.1" }
clap = { version = "4.5.49" }
cc = { version = "1.2.49" }
base16ct = { version = "0.3.0" }
askama = {version = "0.15.0" }
toml = { version = "0.9.8", features = ["preserve_order"] }
wit-bindgen = { version = "0.50.0" }
tracing = { version = "0.1.43" }
pgwire = { version = "0.37.0", default-features = false, features = ["server-api-ring", "pg-ext-types"]}