[package]
name = "mudu"
version = "0.1.0"
edition = "2024"


[dependencies]
scc = { workspace = true }
byteorder = { version = "1.5.0" }
serde = { workspace = true }
serde_json = { workspace = true }
lazy_static = { version = "1.5.0" }
crc = { version = "3.3.0" }
uuid = { version = "1.16.0", features = [
    "v4",
    "js" # wasm need this
] }
toml = { version = "0.9.5", features = ["preserve_order"] }
num_enum = { version = "0.7.4" }
fallible-iterator = "0.3.0"

rmp-serde = { workspace = true }
tracing = "0.1.41"
typetag = { workspace = true }
paste = "1.0.15"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
console-subscriber = "0.4.1"
arbitrary = { workspace = true }
test_utils = { workspace = true }

[lib]
path = "src/lib.rs"

[features]
test = []


