[package]
name = "mudu"
version = "0.1.0"
edition = "2024"


[dependencies]
byteorder = { version = "1.5.0" }
serde = { workspace = true }
serde_json = { workspace = true }
lazy_static = { version = "1.5.0" }
uuid = { version = "1.16.0", features = [
    "v4",
    "js" # wasm need this
] }
toml = { version = "0.9.5", features = ["preserve_order"] }
num_enum = { version = "0.7.4" }
rmp-serde = { workspace = true }
rmpv = { workspace = true }
crc = "3.3.0"
heck = { version = "0.5.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
console-subscriber = {workspace = true}
arbitrary = { workspace = true }
test_utils = { workspace = true }
uniffi = { version = "0.30.0", features = ["scaffolding-ffi-buffer-fns"] }
[lib]
path = "src/lib.rs"

[features]
test = []
