[package]
name = "mudu_contract"
version = "0.1.0"
edition = "2024"

[dependencies]
mudu = { workspace = true }
mudu_type = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
scc = { workspace = true }
byteorder = { version = "1.5.0" }
lazy_static = { version = "1.5.0" }
uuid = { version = "1.16.0", features = [
    "v4",
    "js" # wasm need this
] }
fallible-iterator = "0.3.0"
tracing = { version = "0.1.43" }
paste = "1.0.15"
toml = { workspace = true }
async-trait = "0.1.89"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
console-subscriber = { workspace = true }
arbitrary = { workspace = true }
test_utils = { workspace = true }
thiserror = { version = "2.0.17" }
uniffi = { version = "0.30.0", features = ["scaffolding-ffi-buffer-fns"] }
