[package]
name = "mudu_gen"
version = "0.1.0"
edition = "2024"



[build-dependencies]
project-root = { workspace = true }

[dependencies]
mudu = { workspace = true }
sql_parser = { workspace = true }
clap = { workspace = true, features = ["derive"] }
rust-format = "0.3.4"
tera = {version = "1.20.1"}
[dev-dependencies]
project-root = { workspace = true }

[lib]
path = "src/lib.rs"

[[bin]]
name = "mgen"
path = "tool/main.rs"



