[package]
name = "mudu_kernel"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "mudu_server"
path = "src/mududb/main.rs"

[dependencies]

mudu = { workspace = true, features = ["test"] }
tree_sitter_sql = { workspace = true }

uuid = { version = "1.8.0", features = ["v4"] }
byteorder = "1.5.0"
serde = "1.0.210"
bincode = "2.0.0-rc.3"
tokio = { version = "1.40.0", features = ["full"] }
lazy_static = "1.5.0"
crc = "3.2.1"
regex = { version = "1.11.0" }
serde_json = { workspace = true, features = ["preserve_order"] }
num_cpus = { version = "1.16.0" }
async-trait = { version = "0.1.83" }
arbitrary = { version = "1.4.2", features = ["derive"] }
tracing = { version = "0.1.40" }
chrono = { version = "0.4.38" }
async-backtrace = { version = "0.2.7" }
console-subscriber = "0.4.0"
tree-sitter = { workspace = true }
substring = "1.4.5"
pgwire = "0.35.0"
futures = { version = "0.3.30", features = [] }
scc = "2.2.2"
rand = "0.9.0-alpha.2"
bplustree = { version = "0.1.0" }
md-5 = { version = "0.11.0-pre.4" }
project-root = { version = "0.2.2" }
hex = { version = "0.4.3" }
async-recursion = { version = "1.1.1" }
toml = { version = "0.8.19" }
home = { version = "0.5.9" }
rusqlite = { workspace = true }
csv-async = { version = "1.3.0" }
async-std = { version = "1.13.0" }
tracing-subscriber = "0.3.18"
bytes = "1.8.0"
http = "1.1.0"
http-body-util = "0.1.2"
hyper = "1.5.0"
hyper-util = "0.1.10"
libc = { version = "0.2.164" }
log = "0.4.22"
sql_parser = { workspace = true }
test_utils = { workspace = true }
mudu_utils = { workspace = true }
[target.'cfg(target_os = "linux")'.dependencies]
rliburing = { git = "https://github.com/scuptio/rliburing.git" }


[dev-dependencies]
postgres = { version = "0.19.9" }

[features]
test = []