[package]
name = "mudu_kernel"
version = "0.0.1"
edition = "2021"


[[bin]]
name = "mudu_server"
path = "src/mududb/main.rs"

[features]
test = []
iouring = ["dep:rliburing"]

[dependencies]

mudu = { workspace = true, features = ["test"] }

mudu_type = { workspace = true, features = ["test"] }
mudu_contract = { workspace = true }
uuid = { version = "1.8.0", features = ["v4"] }

serde = "1.0.210"

tokio = { version = "1.40.0", features = ["full"] }
lazy_static = "1.5.0"

regex = { version = "1.11.0" }
serde_json = { workspace = true, features = ["preserve_order"] }

async-trait = { version = "0.1.83" }
arbitrary = { version = "1.4.2", features = ["derive"] }
tracing = { version = "0.1.40" }
chrono = { version = "0.4.38" }
async-backtrace = { version = "0.2.7" }
pgwire = { workspace = true }
futures = { version = "0.3.30", features = [] }
scc = {workspace = true}
project-root = { version = "0.2.2" }
toml = { workspace = true }
home = { version = "0.5.9" }
rusqlite = { workspace = true }
csv-async = { version = "1.3.0" }
async-std = { version = "1.13.0" }
libc = { version = "0.2.164" }
sql_parser = { workspace = true }
test_utils = { workspace = true }
mudu_utils = { workspace = true }
roaring = "0.11.2"
mcslock = {version = "0.4.1"}
rand = "0.9.2"
tokio-condvar = {version = "0.3.0"}

rliburing = { git = "https://github.com/scuptio/rliburing.git", optional = true }


[dev-dependencies]
postgres = { version = "0.19.9" }
