[package]
name = "mudu_package"
version = "0.1.0"
edition = "2024"

[dependencies]
zip = "6.0.0"
clap = { version = "4.5.50", features = ["derive"] }
tempfile = "3.23"
anyhow = "1.0.100"
mudu = { workspace = true }
serde = { workspace = true }
mudu_contract = { workspace = true }

[[bin]]
name = "mpk"
path = "src/main.rs"
