[package]
name = "mudu_type"
version = "0.1.0"
edition = "2024"

[features]
test = []

[dependencies]
scc = { workspace = true }
byteorder = { version = "1.5.0" }
serde = { workspace = true }
serde_repr = {workspace = true}
serde_json = { workspace = true }
lazy_static = { version = "1.5.0" }
paste = "1.0.15"
mudu = { workspace = true }
hex = "0.4.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
console-subscriber = {workspace = true}
arbitrary = { workspace = true }
test_utils = { workspace = true }

