[package]
name = "mudu_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
md-5 = { version = "0.11.0-pre.4" }
hyper = "1.5.0"
hyper-util = "0.1.10"
tracing-subscriber = "0.3.20"
bytes = "1.10.1"
http = "1.3.1"
http-body-util = "0.1.3"
lazy_static = "1.5.0"
mudu = { workspace = true }
tokio = { workspace = true }
scc = "3.0.7"
uuid = { version = "1.18.1", features = ["v4"] }
async-backtrace = "0.2.7"
tracing = "0.1.41"
hex = "0.4.3"
console-subscriber = {workspace = true}
async-trait = "0.1.89"
futures = "0.3.31"
tree-sitter = { workspace = true }
serde_json = "1.0.145"
base16ct = "0.3.0"