[package]
name = "tree_sitter_sql"
description = "sql parser"
version = "0.0.1"
keywords = ["incremental", "parsing", "dot"]
categories = ["parsing", "text-editors"]
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
    "bindings/rust/*",
    "grammar.js",
    "queries/*",
    "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = { workspace = true }

[dev-dependencies]

tree-sitter = { workspace = true }

[build-dependencies]
cc = { workspace = true }
