[package]
name = "tree-sitter-wit"
description = "WIT grammar for tree-sitter"
version = "1.2.0"
authors = ["Liam Woodleigh-Hardinge <liam.woodleigh@gmail.com>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "readme.md"
keywords = ["incremental", "parsing", "tree-sitter", "wit"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/liamwh/tree-sitter-wit"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = { workspace = true }

[build-dependencies]
cc = { workspace = true }

[dev-dependencies]
tree-sitter = { workspace = true }
