[package]
name = "wallet"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]


[dependencies]
mudu = { workspace = true }
mudu_type = { workspace = true }
mudu_contract = { workspace = true }
mudu_binding = { workspace = true }
uuid = { version = "1.17.0", features = ["v4"] }
lazy_static = "1.5.0"
sys_interface = { workspace = true, features = ["async"] }
wit-bindgen = { workspace = true }

[dev-dependencies]
